--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,13 @@ cython_debug/
 
 # Local History for Visual Studio Code
 .history/
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
